--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.9",
 		"dompurify": "^3.0.6",
+		"firebase": "^10.7.1",
 		"isomorphic-dompurify": "^1.9.0",
 		"jsdom": "^22.1.0",
 		"lodash": "^4.17.21",
@@ -29,6 +30,7 @@
 		"polished": "^4.2.2",
 		"query-string": "^8.1.0",
 		"react": "^18.2.0",
+		"react-confetti": "^6.1.0",
 		"react-currency-input-field": "^3.6.11",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
@@ -41,6 +43,7 @@
 		"react-router-dom": "^6.14.2",
 		"react-scripts": "5.0.1",
 		"react-toastify": "^9.1.3",
+		"react-use": "^17.4.2",
 		"recharts": "^2.7.2",
 		"sass": "^1.66.1",
 		"store": "^2.0.12",
